# Scoundrel-TUI

./: .gitignore  README.md  pyproject.toml
assets/scoundrel/monsters/clubs/: 02-archer.avif  02-rouser.avif  03-wolf-rider.avif  04-grunt.avif  04-whelp.avif  05-grunt-2.avif  06-grunt-4.avif  06-slayer.avif  07-crossbowman.avif  08-warrior.avif  09-grunt-5.avif  10-grunt-6.avif  10-slurbow.avif  12-ruler-2.avif  12-ruler.avif  12-shaman.avif  13-troll-warrior.avif  13-warlord.avif  14-sovereign.avif  assassin.avif
assets/scoundrel/potions/: 02-ChatGPT Image Apr 25, 2026, 06_43_00 PM.avif  02-letter_and_ale.avif  03-ChatGPT Image Apr 25, 2026, 06_44_20 PM.avif  03-shield_wooden.avif  04-ChatGPT Image Apr 25, 2026, 06_46_42 PM.avif  04-helmet_conical.avif  05-potion_red_small.avif  06-potion_red_medium.avif  06-shield_tower_merfolk.avif  07-ChatGPT Image Apr 25, 2026, 06_34_03 PM.avif  07-steel_armor.avif  08-ChatGPT Image Apr 25, 2026, 06_32_07 PM.avif  08-potion_red_medium.avif  09-ChatGPT Image Apr 25, 2026, 06_39_34 PM.avif  09-ankh_necklace.avif  10-ChatGPT Image Apr 25, 2026, 06_41_15 PM.avif  10-ring_gold.avif
assets/scoundrel/weapons/: 00-fist-human.avif  02-slingshot.avif  03-club-small.avif  03-dagger-human.avif  04-axe.avif  05-spear.avif  07-bow-short-reinforced.avif  07-sword-human.avif  08-hammer-dwarven.avif  09-sword-flaming.avif  10-sword-holy-I.avif
demo/: scoundrel-demo.avif
src/scoundrel_tui/: __init__.py  app.py  artwork.py  assets.py  cards.py  config.py  game.py  images.py  rendering.py  tui.py
tests/: test_rules.py
(+86 files in other folders)
